# bonne_nuit

./: .gitignore  .ninja_deps  .ninja_log  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  Doxygen  Game.cpp  Game.h  GoodNight.h  LICENSE  Makefile  Pawn.h  Player.h  README.md  StartWindow.ui  atlir5_Bonne_nuit  atlir5_Bonne_nuit-Tests  build.ninja  cmake_install.cmake  main.cpp
atlir5_Bonne_nuit-Tests_autogen/: deps
atlir5_Bonne_nuit_autogen/: deps  moc_predefs.h
atlir5_Bonne_nuit_autogen/3JYSCEOBDA/: moc_View.cpp  moc_View.cpp.d
atlir5_Bonne_nuit_autogen/5B2EWLNMXV/: qrc_images.cpp
catch2/: catch.hpp
exceptions/: OutOfGameBoardException.h  PawnInPlaceException.h
ressources/: random.hpp
src/: Board.cpp  Board.h  Game.cpp  Game.h  GoodNight.cpp  GoodNight.h  Pawn.h  Player.cpp  Player.hpp  main.cpp
src/Controller/: Controller.cpp  Controller.h
src/Model/: Model.cpp  Model.h
src/Model/Game/: Board.cpp  Board.h  Game.cpp  Game.h  GameState.hpp  GoodNight.cpp  GoodNight.h  Player.hpp
src/Utils/: Observable.h  Observer.h
src/View/: View.cpp  View.h
src/View/windows/: application.hpp  gameWindow.hpp  newPlayerWidget.cpp  newPlayerWidget.h  playerInfo.hpp  playerWidget  startwindow.h  test.hpp  test.ui
src/exceptions/: NoPawnFound.h  NumberOfPlayerException.h  NumberOfPlayersException.h  OutOfGameBoardException.h  PawnInPlaceException.h
src/game/: Board.cpp  Board.h  Game.cpp  Game.h  GameState.h  Pawn.h  Player.h
src/model/: Board.cpp  Board.h  Game.cpp  Game.h  GameState.hpp  Model.cpp  Model.h  Pawn.hpp  Player.hpp
src/model/Game/: Board.cpp  Board.h  Game.cpp  Game.h  GameState.hpp  GoodNight.h  Pawn.hpp  Player.hpp
src/ressources/: images.qrc  random.hpp
src/ui/: application.ui  gameInfo.ui  gameWindow.ui  mainWindow.ui  player.ui  playerInfo.ui  playerWidget.ui  startWindow.ui  test.ui
src/utils/: Observable.h  Observer.h
src/view/: MainWindow.cpp  MainWindow.h  View.cpp  View.h
src/view/windows/: mainWindow.cpp  mainWindow.h  mainWindow.hpp  newPlayerWidget.cpp  newPlayerWidget.h  test.hpp  winnerWidget.cpp  winnerWidget.h
test/: mainTest.cpp  testGame.cpp
